tests/should_fail/unexpected_value_in_return.jou
def foo():
    return 'x'  # Error: return type must be written on the first line of the function definition, after a '->'
